# Chip8Emu

./: CMakeLists.txt  README.md  chip8.cpp  chip8.h  chip8display.cpp  chip8display.h  chip8graphicsview.cpp  chip8graphicsview.h  chip8keyboard.cpp  chip8keyboard.h  chip8pixelitem.cpp  chip8pixelitem.h  configdialog.cpp  configdialog.h  configdialog.ui  kbddevice.cpp  kbddevice.h  keyboarddialog.cpp  keyboarddialog.h  keyboarddialog.ui  keyboardmappingdialog.cpp  keyboardmappingdialog.h  keyboardmappingdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
